// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter button/modal does not render if there are no filters 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <ProductSort
              availableSortMethods={
                Array [
                  Object {
                    "attribute": "sortItem.attribute",
                    "id": "sortItem.method",
                    "sortDirection": "ASC",
                    "text": "sortItem.text",
                  },
                ]
              }
              sortProps={
                Array [
                  Object {
                    "sortAttribute": "",
                    "sortDirection": "",
                    "sortText": "",
                  },
                  [MockFunction],
                ]
              }
            />
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`filter button/modal renders when there are filters 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <FilterModalOpenButton
              filters={
                Array [
                  Object {},
                ]
              }
            />
            <ProductSort
              availableSortMethods={
                Array [
                  Object {
                    "attribute": "sortItem.attribute",
                    "id": "sortItem.method",
                    "sortDirection": "ASC",
                    "text": "sortItem.text",
                  },
                ]
              }
              sortProps={
                Array [
                  Object {
                    "sortAttribute": "",
                    "sortDirection": "",
                    "sortText": "",
                  },
                  [MockFunction],
                ]
              }
            />
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
        <require('../../components/FilterModal')
          filters={
            Array [
              Object {},
            ]
          }
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`filter sidebar does not render if not in viewport 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <FilterModalOpenButton
              filters={
                Array [
                  Object {},
                ]
              }
            />
            <ProductSort
              availableSortMethods={
                Array [
                  Object {
                    "attribute": "sortItem.attribute",
                    "id": "sortItem.method",
                    "sortDirection": "ASC",
                    "text": "sortItem.text",
                  },
                ]
              }
              sortProps={
                Array [
                  Object {
                    "sortAttribute": "",
                    "sortDirection": "",
                    "sortText": "",
                  },
                  [MockFunction],
                ]
              }
            />
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
        <require('../../components/FilterModal')
          filters={
            Array [
              Object {},
            ]
          }
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`filter sidebar renders when in viewport 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      >
        <require('../../components/FilterSidebar')
          filters={
            Array [
              Object {},
            ]
          }
        />
      </div>
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <FilterModalOpenButton
              filters={
                Array [
                  Object {},
                ]
              }
            />
            <ProductSort
              availableSortMethods={
                Array [
                  Object {
                    "attribute": "sortItem.attribute",
                    "id": "sortItem.method",
                    "sortDirection": "ASC",
                    "text": "sortItem.text",
                  },
                ]
              }
              sortProps={
                Array [
                  Object {
                    "sortAttribute": "",
                    "sortDirection": "",
                    "sortText": "",
                  },
                  [MockFunction],
                ]
              }
            />
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
        <require('../../components/FilterModal')
          filters={
            Array [
              Object {},
            ]
          }
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`renders empty page 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Empty Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          />
        </div>
        <NoProductsFound
          categoryId={42}
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`renders loading indicator if no data and loading 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          >
            <Shimmer
              width={5}
            />
          </div>
          <div
            className="headerButtons"
          >
            <ProductSortShimmer />
          </div>
          <SortedByContainerShimmer />
        </div>
        <section
          className="gallery"
        >
          <GalleryShimmer
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`renders the correct tree 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <ProductSort
              availableSortMethods={
                Array [
                  Object {
                    "attribute": "sortItem.attribute",
                    "id": "sortItem.method",
                    "sortDirection": "ASC",
                    "text": "sortItem.text",
                  },
                ]
              }
              sortProps={
                Array [
                  Object {
                    "sortAttribute": "",
                    "sortDirection": "",
                    "sortText": "",
                  },
                  [MockFunction],
                ]
              }
            />
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`sort button/container does not render if there are no products 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          />
        </div>
        <NoProductsFound
          categoryId={42}
        />
      </div>
    </div>
  </article>
</div>
`;

exports[`sort button/container renders when there are products 1`] = `
<div>
  <Breadcrumbs
    categoryId={42}
  />
  Title
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        aria-live="polite"
        className="title"
      >
        <div
          className="categoryTitle"
        >
          <div>
            Name
          </div>
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <ProductSort
              availableSortMethods={
                Array [
                  Object {
                    "attribute": "sortItem.attribute",
                    "id": "sortItem.method",
                    "sortDirection": "ASC",
                    "text": "sortItem.text",
                  },
                ]
              }
              sortProps={
                Array [
                  Object {
                    "sortAttribute": "",
                    "sortDirection": "",
                    "sortText": "",
                  },
                  [MockFunction],
                ]
              }
            />
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
      </div>
    </div>
  </article>
</div>
`;
